--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.0",
     "nodemon": "^1.11.0",
-    "webpack": "^3.3.0"
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.5.1"
   }
 }
